--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@types/next": "^8.0.7",
     "@types/node": "^24.0.8",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
